--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,9 +1,69 @@
-/*Header*/
+ /*GLOBAL STYLE*/
+    html{background-image: url(../Images/Background.png);}
+    
+    /*Fonts*/
+    * {font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;} 
 
-/*Main*/
+    h1,h2{font-family:'Georgia', Times, Times New Roman, serif;}
 
-/*Main-Content*/
-
-/*Main-Sidebar*/
-
-/*Footer*/
+    /*BODY*/
+            body{margin: 0px;}
+        /*Header*/
+            header{
+                background-color: #ffffff;
+                border-bottom-style: solid;
+                border-bottom-color: #cccccc;
+                border-bottom-width: 3px;
+                height: 100px;
+            }
+            .header{
+                width:960px;
+                margin-left: auto;
+                margin-right: auto;
+                vertical-align: middle;
+                height: 100px;
+            }
+            h1{
+                float: left;
+                color: white;
+                background-color: #4aaaa5;
+            }
+            nav{
+                float:right;
+            }
+        /*Main*/
+            main{
+                width: 960px;
+                height: auto;
+                margin: auto;
+                margin-top: 30px;
+                }
+            h2{
+                color: #4aaaa5;
+            }
+            .content{
+                float:left;
+                background-color: #ffffff;
+                padding: 30px;
+                width: 590px;
+            }
+            .sidebar{
+                background-color: #ffffff; 
+                float:right;
+                width: 210px;
+                padding: 30px;
+            }
+            .social{
+                width: 28%;
+                margin: 0px;
+            }
+/*Profile Page*/
+    img {
+        float: left;
+        margin-right: 15px;
+        padding-top: 15px;
+    }
+    .bio {
+        line-height: 28px;
+        text-indent: 20px;
+    }
