--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -57,6 +57,18 @@
                 width: 28%;
                 margin: 0px;
             }
+        /*Footer*/
+            footer{
+                text-align: center;
+                width: 100%;
+                background-color: #666666;
+                border-top: #4aaaa5;
+                border-top-width: 5px;
+                border-style: solid;
+            }
+            .push, footer {
+                position: sticky;
+            }
 /*Profile Page*/
     img {
         float: left;
