--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -2,73 +2,132 @@
     html{background-image: url(../Images/Background.png);}
     
     /*Fonts*/
-    * {font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;} 
+        * {font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;} 
 
-    h1,h2{font-family:'Georgia', Times, Times New Roman, serif;}
+        h1,h2{font-family:'Georgia', Times, Times New Roman, serif;}
 
     /*BODY*/
             body{margin: 0px;}
         /*Header*/
-            header{
-                background-color: #ffffff;
-                border-bottom-style: solid;
-                border-bottom-color: #cccccc;
-                border-bottom-width: 3px;
-                height: 100px;
-            }
-            .header{
-                width:960px;
-                margin-left: auto;
-                margin-right: auto;
-                vertical-align: middle;
-                height: 100px;
-            }
-            h1{
-                float: left;
-                color: white;
-                background-color: #4aaaa5;
-            }
-            nav{
-                float:right;
-            }
+            /*Name*/
+                header{
+                    background-color: #ffffff;
+                    border-bottom-style: solid;
+                    border-bottom-color: #cccccc;
+                    border-bottom-width: 3px;
+                    height: 97px;
+                    min-width: 960px;
+                }
+                .header{
+                    width:960px;
+                    margin-left: auto;
+                    margin-right: auto;
+                    height: 97px;
+                    position: relative;
+                }
+                h1{
+                    color: white;
+                    background-color: #4aaaa5;
+                    position: absolute;
+                    bottom: 0px;
+                    margin: 0px;
+                    padding: 25px 30px;
+                    font-size: 32px;
+                }
+            /*Nav Panel*/
+                nav{
+                    position: absolute;
+                    right: 0px;
+                    bottom: 0px;
+                    padding: 15px 0px;
+                    
+                            }
+                li{
+                    display: inline;
+                    font-size: 20px;
+                }
+
+                a{
+                    text-decoration: none;
+                }
+
+                a:link,
+                a:visited{
+                    color: #cccccc;
+                }
+
+                a:hover{
+                    color: #4aaaa5; 
+                }
+
+                li:not(:first-child):before {
+                    content: " | ";
+                    color: #cccccc
+                }
         /*Main*/
             main{
                 width: 960px;
-                height: auto;
-                margin: auto;
-                margin-top: 30px;
+                margin: 30px auto;
+                position: relative;
                 }
-            h2{
-                color: #4aaaa5;
-            }
-            .content{
-                float:left;
-                background-color: #ffffff;
-                padding: 30px;
-                width: 590px;
-            }
-            .sidebar{
-                background-color: #ffffff; 
-                float:right;
-                width: 210px;
-                padding: 30px;
-            }
-            .social{
-                width: 28%;
-                margin: 0px;
-            }
+            /*Content*/
+                .content h2{
+                    color: #4aaaa5;
+                    font-size: 32px;
+                    margin: 0px;
+                    margin-bottom: 15px;
+                }
+                .content{
+                    position: relative;
+                    background-color: #ffffff;
+                    padding: 30px;
+                    width: 590px;
+                    overflow: auto;
+                }
+            /*SideBar*/
+                .sidebar h2{
+                    color: #4aaaa5;
+                }
+                .sidebar{
+                    background-color: #ffffff; 
+                    position: absolute;
+                    width: 210px;
+                    padding: 30px;
+                    right: 0px;
+                    top: 0px;
+                }
+                .social{
+                    display: inline;
+                    margin: 0px;
+                    height: 60px;
+                }
+                .connect a{
+                    vertical-align: top;
+                    display: inline-block;
+                    *display: inline;
+                }
+                .connect{
+                    width: 210px;
+                }
         /*Footer*/
             footer{
                 text-align: center;
-                width: 100%;
+                min-width: 960px;
+                border: 0px;
                 background-color: #666666;
                 border-top: #4aaaa5;
                 border-top-width: 5px;
                 border-style: solid;
+                margin-top: 30px;
+                position: relative;
+                height: 45px;
             }
-            .push, footer {
-                position: sticky;
+            footer p{
+                color: #cccccc;
+                font-size: 9px;
+                padding-top: 12px;
             }
+
 /*Profile Page*/
     img {
         float: left;
