--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,10 +1,18 @@
  /*GLOBAL STYLE*/
     html{background-image: url(../Images/Background.png);}
-    
+    .flex{
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+    .flex-content{
+        flex:1;
+    }
+
     /*Fonts*/
         * {font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;} 
 
-        h1,h2{font-family:'Georgia', Times, Times New Roman, serif;}
+        h1,h2,h3{font-family:'Georgia', Times, Times New Roman, serif;}
 
     /*BODY*/
             body{margin: 0px;}
@@ -129,7 +137,7 @@
                 padding-top: 12px;
             }
 
-/*Profile Page*/
+/*About Page*/
     img {
         float: left;
         margin-right: 15px;
@@ -138,4 +146,26 @@
     .bio {
         line-height: 28px;
         text-indent: 20px;
+    }
+/*Portfolio Page*/
+    .flex-portfolio{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .container{
+        position: relative;
+        width: 280px;
+    }
+    .port-img{
+        width:100%;
+        position:relative;
+    }
+    .img-text{
+        position: absolute;
+        bottom: 10px;
+        background-color: #4aaaa5;
+        color: white;
+        width:100%;
+        text-align: center;
     }
