--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -128,7 +128,6 @@
                     top: 0px;
                 }
                 .social{
-                    display: inline;
                     margin: 0px;
                     height: 60px;
                 }
@@ -160,10 +159,11 @@
             }
 
 /*About Page*/
-    img {
+    .profilepic {
         float: left;
         margin-right: 15px;
-        padding-top: 15px;
+        padding-top: 10px;
+        width: 35%;
     }
     .bio {
         line-height: 28px;
@@ -185,7 +185,7 @@
     }
     .img-text{
         position: absolute;
-        bottom: 10px;
+        bottom: 15px;
         background-color: #4aaaa5;
         color: white;
         width:100%;
